--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
             <h4>Liste de courses - bis</h4>
             <ol style="font-size: 34px">
                 <li>Installer les packages redux et react-redux</li>
-                <li>Reprendre le TP-02 mais en utilisant le <i>state</i> du store plutot que le <i>state</i> du composant,
+                <li>Comme le TP-02 mais en utilisant le <i>state</i> du store plutôt que le <i>state</i> du composant,
                     et en initialisant la liste sans chargement asynchrone (liste en dur).
                 </li>
                 <li>Créer un <i>action creator</i> <b>setItems</b> qui renvoie une <b>ItemAction</b></li>
