remove unused import

--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
                 import ReactDOM from 'react-dom';
                 import {Provider} from 'react-redux';
                 import {createStore} from 'redux';
-                import {reducer, State} from './reducers/index';
+                import {reducer} from './reducers/index';
                 import {App} from './components/app';
 
                 const store = createStore(reducer);
