--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
             <h4>Liste de courses - ter</h4>
             <ol>
                 <li>Installer redux-thunk</li>
-                <li>Reprendre le TP-04 mais faisant un appel asynchrone (http) pour charger la liste d'items</li>
+                <li>Comme le TP-04 mais en faisant un appel asynchrone (http) pour charger la liste d'items</li>
                 <li>Bonus: Faire une action qui avant d'ajouter l'item au store, applique la TVA sur le prix lors d'un
                     ajout d'item par le formulaire
                 </li>
@@ -1431,7 +1431,7 @@
             <h4>Liste de courses - ter</h4>
             <ol>
                 <li>Installer redux-saga</li>
-                <li>Reprendre le TP-04 mais faisant un appel asynchrone (http) pour charger la liste d'items</li>
+                <li>Comme le TP-04 mais en faisant un appel asynchrone (http) pour charger la liste d'items</li>
                 <li>Faire une saga qui avant d'ajouter l'item au store, applique la TVA sur le prix lors d'un ajout
                     d'item par le formulaire
                 </li>
