add a clue to TP-05

--- a/index.html
+++ b/index.html
@@ -1192,6 +1192,7 @@
             <h4>Liste de courses - ter</h4>
             <ol>
                 <li>Installer redux-thunk</li>
+                <li>Configurer le Middleware "thunk" dans le index.js</li>
                 <li>Comme le TP-04 mais en faisant un appel asynchrone (http) pour charger la liste d'items</li>
                 <li>Bonus: Faire une action qui avant d'ajouter l'item au store, applique la TVA sur le prix lors d'un
                     ajout d'item par le formulaire
