fix enzyme test

--- a/index.html
+++ b/index.html
@@ -1584,6 +1584,13 @@
                 </code></pre>
         </section>
         <section>
+            <h3>Lancer les tests</h3>
+            <ul>
+                <li><i>yarn test</i> en ligne de commande</li>
+                <li><i>runner</i> jest dans Webstorm</li>
+            </ul>
+        </section>
+        <section>
             <h3>Tests des sagas</h3>
 
             <p>L'idée est de tester unitairement les sagas, pas les méthodes appelées.</p>
