--- a/index.html
+++ b/index.html
@@ -1594,6 +1594,7 @@
             <ul>
                 <li><i>yarn test</i> en ligne de commande</li>
                 <li><i>runner</i> jest dans Webstorm</li>
+                <li><i>--coverage</i> pour la couverture de tests</li>
             </ul>
             <aside class="notes">
                 File > Settings > JavaScript > Libraries et Download Jest Typescript definition pour
