hello world daveo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/white.css">
 
+
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
 
@@ -302,7 +303,7 @@
             import Hello from "./Hello";
 
             ReactDOM.render(
-                &lt;Hello name="oxiane"/&gt;,
+                &lt;Hello name="Daveo"/&gt;,
                 document.getElementById('root')
             );
             </code></pre>
