demo for optimisation

--- a/index.html
+++ b/index.html
@@ -1807,6 +1807,9 @@
                 <li>Implémenter la méthode shouldComponentUpdate</li>
                 <li>Installer le plugin React, pour voir si le composant est redessiné</li>
             </ol>
+            <aside class="notes">
+                Démo optimisations
+            </aside>
         </section>
         <section>
             <h3>Let's do it !</h3>
