--- a/index.html
+++ b/index.html
@@ -1639,7 +1639,7 @@
                 <li>Créer un fichier .test.js par composant</li>
                 <li><i>StudentDetails</i>: Vérifier le texte pour les 2 cas (Student.NULL ou non)</li>
                 <li><i>Filter</i>: Vérifier que le callback est appelé lors d'un événement <i>change</i></li>
-                <li><i>StudenstTable</i>: Vérifier le nombre de ligne du tableau suivant le nombre de <i>Student</i> passés. Vérifier
+                <li><i>StudenstTable</i>: Vérifier le nombre de lignes du tableau suivant le nombre de <i>Student</i> passé. Vérifier
                 également le callback.</li>
                 <li><i>StudentsApp</i>: Vérifier que le composant et ses sous composants sont affichés, puis vérifier l'impact des
                 méthodes <i>handleSelectStudent()</i> et
